# website-scrapper

./: .gitignore  .replit  LICENSE  pyproject.toml  scrapper.py  scratch.py  trending.html
