[tool.poetry]
name = "repl_python3_website-scrapper"
version = "0.1.0"
description = ""
authors = ["vatsava9 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
selenium = "^4.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
